# faithfulness-measurable-models

./: .gitignore  LICENSE.rst  LICENSE.txt  Makefile  README.md  cc_interactive.sh  cc_tensorboard.sh  download.sh  login_interactive.sh  mila_interactive.sh  pack_scratch.sh  pyproject.toml  python_cedar_cpu_job.sh  python_cedar_gpu_job.sh  python_narval_gpu_job.sh  setup.cfg  setup_interactive_env.sh  tox.ini  unpack_scratch.sh
batch_jobs/: _job_script.sh  download.sh  faithfulness.sh  masked_data_table.sh  masking.sh  ood.sh  preprocess.sh
drawings/: main-cdf-plot.py  main-faithfulness-plot.py  main-tables.tex  main-train-plot.py
ecoroar/: __init__.py
ecoroar/callback/: __init__.py  extra_validation_dataset.py
ecoroar/dataset/: __init__.py  _abstract_dataset.py  babi.py  boolq.py  cb.py  cola.py  imdb.py  mimic.py  mnli.py  mrpc.py  multi_nli.py  qnli.py  qqp.py  rte.py  snli.py  sst2.py  wnli.py
ecoroar/dataset/local/: __init__.py
ecoroar/dataset/local/babi/: CITATIONS.bib  README.md  TAGS.txt  __init__.py  babi_dataset_builder.py  checksums.tsv
ecoroar/dataset/local/mimic/: CITATIONS.bib  README.md  TAGS.txt  __init__.py  checksums.tsv  mimic_dataset_builder.py
ecoroar/dataset/local/snli/: README.md  TAGS.txt  __init__.py  snli_dataset_builder.py
ecoroar/explain/: __init__.py  _importance_measure.py  _util_batch_parallel.py  _util_evaluate.py  beam_search.py  gradient.py  input_times_gradient.py  integrated_gradient.py  leave_one_out.py  random.py
ecoroar/metric/: __init__.py  _addon_f1_score.py  _addons_matthew.py  auroc.py  f1_score.py  matthew.py  pearson.py  person.py
ecoroar/model/: __init__.py  huggingface.py  lookup_test_model.py  roberta.py  simple_test_model.py
ecoroar/ood/: __init__.py  masf.py  masf_slow.py
ecoroar/optimizer/: __init__.py  adamw.py  adamw_nightly.py
ecoroar/plot/: __init__.py  annotation_mapping.py  bootstrap_confint.py  latex.py
ecoroar/scheduler/: __init__.py  linear_schedule.py
ecoroar/test/: __init__.py  compile_configs.py
ecoroar/tokenizer/: __init__.py  _abstract_tokenizer.py  bert.py  huggingface.py  simple_test_tokenizer.py
ecoroar/transform/: __init__.py  bucketed_padded_batch.py  explainer_masking.py  map_on_gpu.py  random_fixed_masking.py  random_masking.py  random_max_masking.py  sequence_identifier.py  transform_sampler.py
ecoroar/types/: __init__.py  model.py  tokenizer.py  transform.py
ecoroar/util/: __init__.py  default_args.py  experiment_id.py  get_compiler.py  model_name_to_huggingface_repo.py
experiments/: baseline.py  download.py  experiment-name.py  faithfulness.py  imdb_baseline.py  imdb_masking.py  length-distribution.py  masking.py  ood.py  preprocess.py
export/: datasets_table.py  epoch_by_mmr_plot.py  epoch_by_ms_plot.py  epoch_by_valid_plot.py  epoch_plot.py  faithfulness_plot.py  masked_100p_performance_by_both_plot.py  masked_100p_performance_by_valid_ms_aggonly_plot.py  masked_100p_performance_by_valid_ms_plot.py  masked_data_table.py  masked_performance_by_mmr_plot.py  masked_performance_by_ms_plot.py  masked_performance_by_valid_plot.py  masked_performance_plot.py  masking_plot.py  models_table.py  ood_plot.py  racu_table.py  unmasked_performance_by_both_plot.py  unmasked_performance_by_mmr_plot.py  unmasked_performance_by_ms_plot.py  unmasked_performance_by_valid_ms_aggonly_plot.py  unmasked_performance_by_valid_ms_plot.py  unmasked_performance_by_valid_plot.py  unmasked_performance_plot.py  walltime_faithfulness_table.py  walltime_fine-tune_table.py  walltime_importance-measure_table.py  walltime_ood_table.py
tests/: test_callback_extra_val.py  test_dataset.py  test_dataset_example.py  test_dataset_imdb.py  test_dataset_local.py  test_explain.py  test_explain_gradient.py  test_explain_occlusion.py  test_explain_random.py  test_metric.py  test_model_lookup.py  test_model_simple.py  test_ood_mafs.py  test_ood_mafs_internals.py  test_schedule_linear.py  test_tokenizer_bert.py  test_tokenizer_huggingface.py  test_tokenizer_simple.py  test_trainsform_expainer_masking.py  test_transform_bucketed_padded_batch.py  test_transform_expainer_masking.py  test_transform_random_fixed_masking.py  test_transform_random_masking.py  test_transform_random_max_masking.py  test_transform_sequence_identifier.py  test_transform_transform_sampler.py
upgrade/: cleanup_umatched_files.py  ood-simes.py  rename-ood.py  subdir_results.sh  sync_filenames.py  v1-high-masking-to-v2-alt-fine-tuning.py
