[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ecoroar"]

[project]
name = "ecoroar"
description = "Evaluates ROAR faithfulness without retraining"
version = "0.1.0"
readme = "LICENSE.txt"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy >= 1.23.0",
    "tqdm >= 4.64.0",
    "plotnine >= 0.8.0",
    "pandas >= 1.5.0",
    "tensorflow >= 2.11.0; sys_platform != 'darwin'",
    "tensorflow_macos >= 2.11.0; sys_platform == 'darwin'",
    "tensorflow_addons >= 0.19.0",
    "tensorflow_datasets >= 4.7.0",
    "transformers == 4.26.0"
]

[project.optional-dependencies]
test = [
    "pytest >= 7.2.1",
    "tox >= 3.24.4"
]
