[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ecoroar"]

[project]
name = "ecoroar"
description = "Evaluates ROAR faithfulness without retraining"
version = "0.1.0"
readme = "LICENSE.txt"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy >= 1.23.2",
    "scipy >= 1.10.1",
    "tqdm >= 4.64.0",
    "mizani >= 0.7.3",  # colors for plotnine
    "plotnine >= 0.8.0",
    "numexpr >= 2.8.4",  # speedup pandas
    "bottleneck >= 1.3.6",  # speedup pandas
    "fastparquet >= 2023.2.0",  # parquet support for pandas
    "pandas >= 1.5.0,<2.0.0",
    "h5py >= 3.8.0",  # weight saving for keras
    "tensorflow == 2.12.0; sys_platform != 'darwin'",
    "tensorflow_macos == 2.12.0; sys_platform == 'darwin'",
    "tensorflow_datasets == 4.9.2",
    'typeguard >= 2.13.3', # tensorflow-addons
    "transformers == 4.26.0"
]

[project.optional-dependencies]
test = [
    "pytest-skip-slow >= 0.0.5",  # enables pytest.mark.slow
    "pytest >= 7.2.1",
    "tox >= 3.24.4",
    "scikit-learn >= 1.1.2"
]
