[metadata]
name = ecoroar
version = 0.0.1
description = 'Evaluates ROAR faithfulness without retraining'
long_description = file: README.md, LICENSE.rst
license = MIT

[options]
packages = ecoroar
install_requires =
    numpy >= 1.21.0
    tqdm >= 4.61.2
    plotnine >= 0.8.0
    pandas >= 1.3.0
    tensorflow >= 2.7.0
    transformers >= 4.15.0
    datasets >= 1.18.0
