[metadata]
name = ecoroar
version = 0.0.1
description = 'Evaluates ROAR faithfulness without retraining'
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt

[options]
packages = ecoroar
python_requires = >=3.8
install_requires =
    numpy >= 1.21.0
    tqdm >= 4.61.2
    plotnine >= 0.8.0
    pandas >= 1.3.0
    tensorflow >= 2.7.0
    tensorflow_text >= 2.7.0
    tensorflow_addons >= 0.15.0
    tensorflow_datasets >= 4.3.0
    transformers >= 4.15.0

[options.extras_require]
tester =
    pytest >= 6.2.0
    tox >= 3.24.0

[flake8]
max-line-length = 119
