[metadata]
name = ecoroar
version = 0.0.1
description = 'Evaluates ROAR faithfulness without retraining'
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.22.0
    tqdm >= 4.64.0
    plotnine >= 0.8.0
    pandas >= 1.3.0
    tensorflow >= 2.8.0
    tensorflow_text >= 2.8.0
    tensorflow_addons >= 0.16.0
    tensorflow_datasets >= 4.5.0
    transformers >= 4.19.1

[options.extras_require]
tester =
    pytest >= 7.1.2
    tox >= 3.25.0
